# soft_nms_cpp

./: CMakeLists.txt  package.xml  readme.md
include/soft_nms/: soft_nms.h
src/soft_nms/: soft_nms.cpp
